# OpenCV-Android

./: .gitignore  settings.gradle
app/: build.gradle  google-services.json
app/src/androidTest/java/com/kudashov/opencv_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_utils.cpp  opencv_utils.h
app/src/main/java/com/kudashov/opencv_android/: Constants.kt  MainActivity.kt  MainState.kt  MainViewModel.kt
app/src/main/java/com/kudashov/opencv_android/base/: App.kt  Constants.kt
app/src/main/java/com/kudashov/opencv_android/extensions/: ViewExtensions.kt  ViewModelExtensions.kt
app/src/main/java/com/kudashov/opencv_android/image_processor/: ImageProcessor.kt  NdkImageProcessor.kt  SdkImageProcessor.kt
app/src/main/java/com/kudashov/opencv_android/screens/from_gallery/: FromGalleryActivityView.kt  FromGalleryState.kt  FromGalleryViewModel.kt
app/src/main/java/com/kudashov/opencv_android/screens/main/: MainActivity.kt
app/src/main/java/com/kudashov/opencv_android/screens/test/: FirebaseInteractor.kt  TestsActivityView.kt  TestsState.kt  TestsViewModel.kt
app/src/main/res/layout/: activity_from_gallery.xml  activity_main.xml  activity_tests.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kudashov/opencv_android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
